--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+
+# Dataset
+Railroad_Incidents\Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
+
 # Codealike
 codealike.json
 
