--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 
 # Dataset
-Railroad_Incidents\Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
+Railroad_Incidents/Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
 
 # Codealike
 codealike.json
