added metadata + superfluous col mini analysis

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,5 @@ Temporary Items
 pyvenv.cfg
 .venv
 pip-selfcheck.json
+Notebooks/Railroad Incidents/Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
+Railroad Incidents/Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
