--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 
+#Notebooks
+Notebooks/
+
 # Dataset
 Railroad_Incidents/Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20241026.csv
 
