Update launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
       "name": "Launch Streamlit App",
       "type": "debugpy",
       "request": "launch",
-      "program": "${workspaceFolder}/jbi100_app_streamlit/app.py",
-      "args": ["run"],
+      "module": "streamlit",
+      "args": ["run", "${workspaceFolder}/jbi100_app_streamlit/app.py"],
       "console": "integratedTerminal",
       "justMyCode": true
     }
