--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,7 @@ Railroad Incidents/Railroad_Equipment_Accident_Incident_Source_Data__Form_54__20
 jbi100_app_dash/Railroad_Incidents/CleanedDataset.csv
 jbi100_app_dash/Railroad_Incidents/dataset.csv
 jbi100_app_dash/Railroad_Incidents/readme.txt
+jbi100_app_dash/clean_dataset.py
+jbi100_app_dash/clean_dataset.py
+jbi100_app_dash/clean_dataset.py
+jbi100_app_streamlit/hanna_tests
